--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <script>
         function openVideo() {
-            window.open("https://drive.google.com/uc?id=1hls4T5lXRTAtdPyfgRrR6-Ui6gY_Io8P");
+            window.open("https://https://drive.google.com/file/d/1hls4T5lXRTAtdPyfgRrR6-Ui6gY_Io8P/view?usp=sharing");
         }
     </script>
 </body>
