--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@
             cursor: pointer;
         }
     </style>
+    <link rel="stylesheet" href="https://cdn.plyr.io/3.6.4/plyr.css">
 </head>
 <body>
     <div class="background-video">
-        <video id="myVideo" loop>
-            <source src="https://https://drive.google.com/file/d/1hls4T5lXRTAtdPyfgRrR6-Ui6gY_Io8P/view?usp=sharing" type="video/mp4">
+        <video id="myVideo" class="plyr" controls loop>
+            <source src="https://drive.google.com/uc?id=1hls4T5lXRTAtdPyfgRrR6-Ui6gY_Io8P" type="video/mp4">
             Seu navegador não suporta vídeos HTML5.
         </video>
         <div class="content">
@@ -58,9 +59,12 @@
         </div>
     </div>
 
+    <script src="https://cdn.plyr.io/3.6.4/plyr.js"></script>
     <script>
+        const player = new Plyr('#myVideo');
+
         function openVideo() {
-            window.open("https://https://drive.google.com/file/d/1hls4T5lXRTAtdPyfgRrR6-Ui6gY_Io8P/view?usp=sharing");
+            window.open("https://drive.google.com/file/d/1hls4T5lXRTAtdPyfgRrR6-Ui6gY_Io8P/view?usp=sharing");
         }
     </script>
 </body>
