--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body>
     <div class="background-video">
         <video id="myVideo" loop>
-            <source src="https://drive.google.com/uc?id=1hls4T5lXRTAtdPyfgRrR6-Ui6gY_Io8P" type="video/mp4">
+            <source src="https://gdurl.com/https://1hls4T5lXRTAtdPyfgRrR6-Ui6gY_Io8P" type="video/mp4">
             Seu navegador não suporta vídeos HTML5.
         </video>
         <div class="content">
