--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <script>
         function openPlayer() {
-            window.open("https://yourplayerurl.com", "_blank");
+            window.open("https://videocandy.com/video-player.html", "_blank");
         }
     </script>
 </body>
